@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-08T08:22:00Z",
-  "count_outdated" : 344,
-  "uniques_outdated" : 218,
-  "count" : 371,
+  "timestamp" : "2022-07-08T16:24:40Z",
+  "count_outdated" : 346,
+  "uniques_outdated" : 219,
+  "count" : 372,
   "uniques" : 235,
   "clones" : [
-    {
-      "timestamp": "2022-06-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-25T00:00:00Z",
       "count": 4,
